import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

nghttp2_lib_sources = [
    "nghttp2_pq.c",
    "nghttp2_map.c",
    "nghttp2_queue.c",
    "nghttp2_frame.c",
    "nghttp2_buf.c",
    "nghttp2_stream.c",
    "nghttp2_outbound_item.c",
    "nghttp2_session.c",
    "nghttp2_submit.c",
    "nghttp2_helper.c",
    "nghttp2_npn.c",
    "nghttp2_hd.c",
    "nghttp2_hd_huffman.c",
    "nghttp2_hd_huffman_data.c",
    "nghttp2_version.c",
    "nghttp2_priority_spec.c",
    "nghttp2_option.c",
    "nghttp2_callbacks.c",
    "nghttp2_mem.c",
    "nghttp2_http.c",
    "nghttp2_rcbuf.c",
    "nghttp2_debug.c",
]

config("nghttp2_lib_config") {
    include_dirs = [
        ".",
        "./includes",
    ]
    defines = ["HAVE_ARPA_INET_H"]
}

lite_library("nghttp2_lib_static") {
    target_type = "static_library"
    sources = nghttp2_lib_sources
    public_configs = [":nghttp2_lib_config"]
    output_name = "nghttp2"
}

lite_library("nghttp2_lib_shared") {
    target_type = "shared_library"
    sources = nghttp2_lib_sources
    public_configs = [":nghttp2_lib_config"]
    output_name = "nghttp2"
}

ndk_lib("nghttp2_lib_ndk") {
    if (ohos_kernel_type == "liteos_m") {
        lib_extension = ".a"
        deps = [":nghttp2_lib_static"]
    } else {
        lib_extension = ".so"
        deps = [":nghttp2_lib_shared"]
    }
    head_files = [
        "//third_party/nghttp2/lib",
        "//third_party/nghttp2/lib/includes",
    ]
}